--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -8,13 +8,11 @@
 
         <app-minimal [pokemon]="item.pokemon"></app-minimal>
 
-      }
-      @case ('normal') {
+      } @case ('normal') {
 
         <app-normal [pokemon]="item.pokemon"></app-normal>
 
-      }
-      @case ('detailed') {
+      } @case ('detailed') {
 
         <app-detailed [pokemon]="item.pokemon"></app-detailed>
 
