--- a/src/app/help/components/how-to-use-guide/how-to-use-guide.component.html
+++ b/src/app/help/components/how-to-use-guide/how-to-use-guide.component.html
@@ -11,44 +11,49 @@
   Open the template url, click on "File" and click on "Make a copy" to copy the template to your Google Drive.</p>
 <picture>
   <source
-    srcset="assets/images/guide/make-a-copy.png"
     media="(prefers-color-scheme: dark)"
+    srcset="assets/images/guide/make-a-copy.png"
   />
   <source
-    srcset="assets/images/guide/make-a-copy-light.png"
     media="(prefers-color-scheme: light), (prefers-color-scheme: no-preference)"
+    srcset="assets/images/guide/make-a-copy-light.png"
   />
-  <img src="assets/images/guide/make-a-copy-light.png" width="368" height="337" class="guide-image" loading="lazy"
-       alt="Picture of File menu  with highlighted menu point Make a copy"/>
+  <img alt="Picture of File menu  with highlighted menu point Make a copy" class="guide-image" height="337"
+       loading="lazy" src="assets/images/guide/make-a-copy-light.png"
+       width="368"/>
 </picture>
 
 
 <p>Open your copy (the "spreadhseet"), fill in all the data you want to and publish the spreadsheet.
   <br>Click on "File" again and "Publish to the web" to start the publishing process.</p>
 
-<img src="assets/images/guide/publish-to-web.png" width="340" height="295" loading="lazy" class="guide-image"
-     alt="Picture of File menu  with highlighted menu point Publish to the web">
+<img alt="Picture of File menu  with highlighted menu point Publish to the web" class="guide-image" height="295"
+     loading="lazy" src="assets/images/guide/publish-to-web.png"
+     width="340">
 
 <p>A dialog should have been opened and shows an option at the bottom to unfold "Published content & settings".
   <br>If it's already opened just proceed to the next step. </p>
 
-<img src="assets/images/guide/unfolded-publishing-options.png" width="605" height="265" loading="lazy"
-     class="guide-image" alt="Partial Dialog showing unfolded option Published content & settings">
+<img alt="Partial Dialog showing unfolded option Published content & settings" class="guide-image" height="265"
+     loading="lazy"
+     src="assets/images/guide/unfolded-publishing-options.png" width="605">
 
 <p>Click on the dropdown field and deselect "Entire document".
   <br>You can now select all tabs you want to publish.</p>
 <p>This way you can choose which tabs are visible to visitors and lets you seperate data from presentation.</p>
 
-<img src="assets/images/guide/select-wanted-tabs.png" width="614" height="382" loading="lazy" class="guide-image"
-     alt="Opened drop down with select tabs Dream and Sport">
+<img alt="Opened drop down with select tabs Dream and Sport" class="guide-image" height="382" loading="lazy"
+     src="assets/images/guide/select-wanted-tabs.png"
+     width="614">
 
 <p>After selecting the tabs you want to publish you can select "Automatically republish when changes are made" to keep
   your published data up to date.
   <br>Press "Start publishing" to make the spreadsheet public and we are done! </p>
 
-<img src="assets/images/guide/control-selection-and-publish.png" width="614" height="271" loading="lazy"
-     class="guide-image"
-     alt="Drop down showing selected tabs, check for option Automatically republish when changes are made is checked">
+<img alt="Drop down showing selected tabs, check for option Automatically republish when changes are made is checked"
+     class="guide-image" height="271" loading="lazy"
+     src="assets/images/guide/control-selection-and-publish.png"
+     width="614">
 
 <h3>Using a published spreadsheet</h3>
 
@@ -63,15 +68,16 @@
 
 <picture>
   <source
-    srcset="assets/images/guide/copy-id.png"
     media="(prefers-color-scheme: dark)"
+    srcset="assets/images/guide/copy-id.png"
   />
   <source
-    srcset="assets/images/guide/copy-id-light.png"
     media="(prefers-color-scheme: light), (prefers-color-scheme: no-preference)"
+    srcset="assets/images/guide/copy-id-light.png"
   />
-  <img src="assets/images/guide/copy-id-light.png" width="872" height="70" class="guide-image" loading="lazy"
-       alt="URL bar of browser with highlighted part of URL which is the required ID"/>
+  <img alt="URL bar of browser with highlighted part of URL which is the required ID" class="guide-image" height="70"
+       loading="lazy" src="assets/images/guide/copy-id-light.png"
+       width="872"/>
 </picture>
 
 
