--- a/src/app/grid/grid-controller/grid-controller.component.html
+++ b/src/app/grid/grid-controller/grid-controller.component.html
@@ -1,9 +1,7 @@
 @if ((hideAppearance$ | async) === false) {
   <app-changer (selectionChanged)="changeGrid($event)"
                class="m-right-gap"></app-changer>
-}
-
-@if ((hideOwnedStatusControl$ | async) === false) {
+} @if ((hideOwnedStatusControl$ | async) === false) {
   <mat-form-field class="sel m-right-gap" appearance="fill"
   >
     <mat-select multiple [formControl]="ownedStatusControl" placeholder="select owned status" panelClass="dark-panel">
@@ -14,8 +12,8 @@
 }
 
 <input [formControl]="filter" class="m-right-gap grid-filter placeholder-light" placeholder="filter by name">
-<mat-form-field class="sel m-right-gap" appearance="fill">
-  <mat-select [formControl]="sorting" placeholder="select sorting" panelClass="dark-panel">
+<mat-form-field appearance="fill" class="sel m-right-gap">
+  <mat-select [formControl]="sorting" panelClass="dark-panel" placeholder="select sorting">
     <mat-option>None</mat-option>
     <mat-option [value]="{id: 'name', start: 'asc', disableClear: false}">Name ascending</mat-option>
     <mat-option [value]="{id: 'name', start: 'desc', disableClear: false}">Name descending</mat-option>
@@ -25,9 +23,9 @@
 
 </mat-form-field>
 
-<mat-form-field class="sel m-right-gap" appearance="fill">
-  <mat-select multiple panelClass="dark-panel" [formControl]="categories" placeholder="Filter by category"
-              #categoriesSelect>
+<mat-form-field appearance="fill" class="sel m-right-gap">
+  <mat-select #categoriesSelect [formControl]="categories" multiple panelClass="dark-panel"
+              placeholder="Filter by category">
     @if (transformSelectSelection(categoriesSelect.selected); as selection) {
       <mat-select-trigger>
         {{ selection.length ? selection[0].viewValue : '' }}
