--- a/src/app/grid/normal/normal.component.html
+++ b/src/app/grid/normal/normal.component.html
@@ -1,13 +1,12 @@
 <div class="icon-wrapper">
-  <img class="icon-foundation" [src]="'assets/images/pokesprite-pokeball.svg'" alt="">
+  <img [src]="'assets/images/pokesprite-pokeball.svg'" alt="" class="icon-foundation">
   <div class="icon">
     <app-pokemon [shiny]="!!pokemon?.isShiny" [slug]="pokemon?.iconSlug"></app-pokemon>
     @if (pokemon?.item) {
       <app-item [slug]="pokemon?.item | slugify"></app-item>
-    }
-    @if (pokemon?.ball) {
-      <app-item [slug]="pokemon?.ball | slugify" category="ball"></app-item>
-    }
+    } @if (pokemon?.ball) {
+    <app-item [slug]="pokemon?.ball | slugify" category="ball"></app-item>
+  }
   </div>
 </div>
 <div class="information">
