--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,24 +1,24 @@
 @use '@angular/material' as mat;
 
 @include mat.core();
-$my-primary: mat.define-palette(mat.$indigo-palette, 500);
-$my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$my-primary: mat.m2-define-palette(mat.$m2-indigo-palette, 500);
+$my-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
 
 // The "warn" palette is optional and defaults to red if not specified.
-$my-warn: mat.define-palette(mat.$red-palette);
+$my-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
-$my-theme: mat.define-light-theme((
+$my-theme: mat.m2-define-light-theme((
   color: (
     primary: $my-primary,
     accent: $my-accent,
     warn: $my-warn,
   ),
-  typography: mat.define-typography-config(),
+  typography: mat.m2-define-typography-config(),
   density: 0,
 ));
 @include mat.all-component-themes($my-theme);
-@import "~pokesprite-spritesheet/assets/pokesprite-pokemon-gen8.css";
-@import "~pokesprite-spritesheet/assets/pokesprite-inventory.css";
+@import "pokesprite-spritesheet/assets/pokesprite-pokemon-gen8.css";
+@import "pokesprite-spritesheet/assets/pokesprite-inventory.css";
 
 $gap-size: 2.5rem;
 
