--- a/src/app/core/components/layout/header/header.component.html
+++ b/src/app/core/components/layout/header/header.component.html
@@ -26,7 +26,7 @@
     </nav>
   } @if (windowSize < 1200) {
     <button type="button" (click)="openMenu()" mat-button>
-      <mat-icon>menu</mat-icon>
+      <mat-icon fontIcon="menu"/>
     </button>
   }
 
