--- a/src/app/breedable/components/index/index.component.html
+++ b/src/app/breedable/components/index/index.component.html
@@ -1,6 +1,6 @@
 <header class="view-header">breedables</header>
 <div class="view-addional-content">
-  <app-grid-controller></app-grid-controller>
+  <app-grid-controller/>
 </div>
 <aside class="view-sidebar">
   @if (worksheets) {
@@ -24,5 +24,5 @@
   }
 </aside>
 <div class="view-content">
-  <router-outlet></router-outlet>
+  <router-outlet/>
 </div>
