--- a/src/app/grid/detailed/detailed.component.html
+++ b/src/app/grid/detailed/detailed.component.html
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    @if (pokemon.ivs || pokemon.evs) {
+    @if (isPokemon(pokemon) && (pokemon.ivs || pokemon.evs)) {
       <div class="detailed-stats row {{natureClass}}"
            [class.ev-iv]="pokemon.ivs && pokemon.evs">
         <div class="detailed-label dark-bg t-align-center">Stats</div>
@@ -80,7 +80,8 @@
         <div class="spe">{{ pokemon.evs.spe }}</div>
       }
       </div>
-    } @if (pokemon.dynamaxLevel) {
+    }
+    @if (isPokemon(pokemon) && pokemon.dynamaxLevel) {
       <div class="detailed-dynamax row ">
         <div class="detailed-label dark-bg">Dynamax Level</div>
         <ul>
@@ -101,7 +102,8 @@
         <div class="detailed-label dark-bg">Nature</div>
         <span class="detailed-text">{{ pokemon.nature }}</span>
       </div>
-    } @if (pokemon.item) {
+    }
+    @if (isPokemon(pokemon) && pokemon.item) {
       <div class="detailed-nature row ">
         <div class="detailed-label dark-bg">Item</div>
         <span class="detailed-text">
