--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -1,6 +1,6 @@
 <header class="view-header">Tools</header>
 <div class="view-addional-content">
-  <app-grid-controller></app-grid-controller>
+  <app-grid-controller/>
 </div>
 <aside class="view-sidebar">
   <ul class="sub-navi">
@@ -19,5 +19,5 @@
   </ul>
 </aside>
 <div class="view-content">
-  <router-outlet></router-outlet>
+  <router-outlet/>
 </div>
