--- a/src/app/shared/components/sub-navi-item/sub-navi-item.component.html
+++ b/src/app/shared/components/sub-navi-item/sub-navi-item.component.html
@@ -1,11 +1,11 @@
-@if (text) {
-  <li class="{{text | slugify}}">
+@if (text()) {
+  <li class="{{text() | slugify}}">
     <a [routerLink]="link()" routerLinkActive="active">
       <div class="icon">
         <ng-content select="app-item, app-pokemon"></ng-content>
       </div>
       <div class="content" [class.no-meta]="!meta()">
-        <span class="title">{{ text }}</span>
+        <span class="title">{{ text() }}</span>
         <span class="meta-info">{{ meta() }}</span>
       </div>
     </a>
