--- a/src/app/living-dexes/living-dexes.component.scss
+++ b/src/app/living-dexes/living-dexes.component.scss
@@ -73,6 +73,10 @@ $categories: 'uncategorized',
   grid-gap: 6px;
   grid-template-columns: repeat(6, 40px);
 
+  &.fluid {
+    grid-template-columns: repeat(auto-fit, 40px);
+  }
+
   .grid-item {
     height: 40px;
     width: 40px;
