--- a/src/app/living-dexes/living-dexes.component.html
+++ b/src/app/living-dexes/living-dexes.component.html
@@ -10,6 +10,9 @@
     <app-sub-navi-item link="../sv" text="Scarlet/Violet">
       <app-item category="ball" slug="poke"></app-item>
     </app-sub-navi-item>
+    <app-sub-navi-item link="../bdsp" text="Brilliant Diamond/Shining Pearl">
+      <app-item category="ball" slug="poke"></app-item>
+    </app-sub-navi-item>
     <app-sub-navi-item link="../swsh" text="Sword/Shield">
       <app-item category="ball" slug="poke"></app-item>
     </app-sub-navi-item>
